Dark Mode errors solved

--- a/sass/tictactoe.scss
+++ b/sass/tictactoe.scss
@@ -26,7 +26,7 @@ h1 {
 }
 
 .dark-mode {
-    .board, .cells {
+    .board, .cells, #cronometro {
         border: 1px solid $white;
     }
 
